Fix mobile bug where overflow would occur horizontally

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--off-white);
+  overflow-x: hidden;
 }
 
 code {
